third_party/move/move-compiler/tests/move_check/parser/constants_quoted_string.exp
error[E01007]: invalid byte string
  ┌─ tests/move_check/parser/constants_quoted_string.move:5:29
  │
5 │     const C12: vector<u8> = "<empty>";
  │                             ^ String literal must begin with b" (for a byte string) or x" (for a hex string)

